--- a/TuneloopApp/AppShell.xaml
+++ b/TuneloopApp/AppShell.xaml
@@ -3,12 +3,60 @@
     x:Class="Tuneloop.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Tuneloop"
+    xmlns:pages="clr-namespace:Tuneloop.Pages"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="Home ro"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+    <TabBar>
+        <Tab Title="Home">
+            <ShellContent
+                Title="Home"
+                ContentTemplate="{DataTemplate pages:MainPage}"
+                Route="MainPage" />
+        </Tab>
+        <Tab Title="Search">
+            <ShellContent
+                Title="Search"
+                ContentTemplate="{DataTemplate pages:SearchPage}"
+                Route="Search" />
+        </Tab>
+        <Tab Title="Library">
+            <ShellContent
+                Title="Songs"
+                ContentTemplate="{DataTemplate pages:SongsPage}"
+                Route="Songs" />
+            <ShellContent
+                Title="Playlists"
+                ContentTemplate="{DataTemplate pages:PlaylistPage}"
+                Route="Playlists" />
+            <ShellContent
+                Title="Genres"
+                ContentTemplate="{DataTemplate pages:GenresPage}"
+                Route="Genres" />
+            <ShellContent
+                Title="Folders"
+                ContentTemplate="{DataTemplate pages:FoldersPage}"
+                Route="Folders" />
+            <ShellContent
+                Title="Albums"
+                ContentTemplate="{DataTemplate pages:AlbumsPage}"
+                Route="Albums" />
+            <ShellContent
+                Title="Artists"
+                ContentTemplate="{DataTemplate pages:ArtistsPage}"
+                Route="Artists" />
+        </Tab>
+        <Tab Title="Equalizer">
+            <ShellContent
+                Title="Equalizer"
+                ContentTemplate="{DataTemplate pages:EqualizerPage}"
+                Route="Equalizer" />
+        </Tab>
+        <Tab Title="Settings">
+            <ShellContent
+                Title="Settings"
+                ContentTemplate="{DataTemplate pages:SettingsPage}"
+                Route="Settings" />
+        </Tab>
+    </TabBar>
+    
 </Shell>
