--- a/TuneloopApp/Pages/MainPage.xaml
+++ b/TuneloopApp/Pages/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Tuneloop.MainPage">
+             x:Class="Tuneloop.Pages.MainPage">
 
     <ScrollView>
         <VerticalStackLayout
@@ -9,6 +9,7 @@
             Padding="30,0"
             VerticalOptions="Center">
 
+            <Label>Home page</Label>
 
         </VerticalStackLayout>
     </ScrollView>
