--- a/TuneloopApp/Resources/Styles/Colors.xaml
+++ b/TuneloopApp/Resources/Styles/Colors.xaml
@@ -4,15 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <!--<Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
-    <Color x:Key="White">White</Color>-->
     <Color x:Key="Primary">#8199bf</Color>
     <Color x:Key="Secondary">#91b0c9</Color>
     <Color x:Key="Tertiary">#7183b5</Color>
     <Color x:Key="White">#f4f3ef</Color>
-
+    <Color x:Key="Black">Black</Color>
     <Color x:Key="Gray100">#E1E1E1</Color>
     <Color x:Key="Gray200">#C8C8C8</Color>
     <Color x:Key="Gray300">#ACACAC</Color>
@@ -21,13 +17,6 @@
     <Color x:Key="Gray600">#404040</Color>
     <Color x:Key="Gray900">#212121</Color>
     <Color x:Key="Gray950">#141414</Color>
-
-    <Color x:Key="Custom1">#f4f3ef</Color>
-    <Color x:Key="Custom2">#7183b5</Color>
-    <Color x:Key="Custom3">#8199bf</Color>
-    <Color x:Key="Custom4">#91b0c9</Color>
-    <Color x:Key="Custom5">#a1c7d4</Color>
-
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
     <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
@@ -51,5 +40,9 @@
     <Color x:Key="Blue100Accent">#3E8EED</Color>
     <Color x:Key="Blue200Accent">#72ACF1</Color>
     <Color x:Key="Blue300Accent">#A7CBF6</Color>
-
+    <Color x:Key="Custom1">#f4f3ef</Color>
+    <Color x:Key="Custom2">#7183b5</Color>
+    <Color x:Key="Custom3">#8199bf</Color>
+    <Color x:Key="Custom4">#91b0c9</Color>
+    <Color x:Key="Custom5">#a1c7d4</Color>
 </ResourceDictionary>
